2013-12-03  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* gcc.dg/vect/costmodel/ppc/costmodel-slp-34.c: Skip for little
	endian.

2013-12-03   H.J. Lu  <hongjiu.lu@intel.com>

	PR target/59363
	* gcc.target/i386/pr59363.c: New file.

2013-12-03  Marek Polacek  <polacek@redhat.com>

	PR c/59351
	* gcc.dg/pr59351.c: New test.

2013-12-03  Chung-Ju Wu  <jasonwucj@gmail.com>

	* gcc.dg/20020312-2.c: Add __nds32__ case.
	* gcc.dg/builtin-apply2.c: Skip for nds32*-*-*.
	* gcc.dg/sibcall-3.c: Expected fail for nds32*-*-*.
	* gcc.dg/sibcall-4.c: Expected fail for nds32*-*-*.
	* gcc.dg/stack-usage-1.c (SIZE): Define case for __nds32__.
	* gcc.dg/torture/pr37868.c: Skip for nds32*-*-*.
	* gcc.dg/torture/stackalign/builtin-apply-2.c: Skip for nds32*-*-*.
	* gcc.dg/tree-ssa/20040204-1.c: Expected fail for nds32*-*-*.
	* gcc.dg/tree-ssa/pr42585.c: Skip for nds32*-*-*.
	* gcc.dg/tree-ssa/sra-12.c: Skip for nds32*-*-*.
	* gcc.target/nds32: New nds32 specific directory and testcases.
	* lib/target-supports.exp (check_profiling_available): Check for
	nds32*-*-elf.

2013-12-03  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/59362
	* gcc.c-torture/compile/pr59362.c: New test.

	PR middle-end/59011
	* gcc.dg/pr59011.c: New test.

	PR target/58864
	* g++.dg/opt/pr58864.C: New test.

2013-12-02  Jeff Law  <law@redhat.com>

	PR tree-optimization/59322
	* gcc.c-torture/compile/pr59322.c: New test.

2013-12-02  Sriraman Tallam  <tmsriram@google.com>

	PR target/58944
	* testsuite/gcc.target/i386/pr58944.c: New test.	

2013-12-02  Joseph Myers  <joseph@codesourcery.com>

	PR c/58235
	* gcc.dg/c90-array-lval-8.c: New test.

2013-12-02  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/59358
	* gcc.c-torture/execute/pr59358.c: New test.

	PR lto/59326
	* gcc.target/i386/i386.exp (check_effective_target_avx2): Move to...
	* lib/target-supports.exp (check_effective_target_avx2): ... here.
	(check_effective_target_vect_simd_clones): New.